--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,7 +186,7 @@ tr:hover {
 }
 
 .login-card {
-  width: 320px;
+  width: 345px;
   background: white;
   padding: 20px;
   border-radius: 10px;
@@ -1257,6 +1257,7 @@ h2 {
   width: 400px;
   padding: 15px 10px;
 }
+
 /* width */
 .rss-scroll::-webkit-scrollbar {
   width: 3px;
@@ -1264,42 +1265,55 @@ h2 {
 
 /* Track */
 .rss-scroll::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 .rss-scroll::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
 .rss-scroll::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
+
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: unset; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: unset;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
   border-radius: 5px;
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 5% auto; /* 10% from the top and centered */
+  margin: 5% auto;
+  /* 10% from the top and centered */
   padding: 10px;
   border: 1px solid #888;
-  width: 60%; /* Set a smaller width for the box */
-  max-height: 80%; /* Set a maximum height if needed */
-  overflow: auto; /* Enable scroll if the content overflows vertically */
+  width: 60%;
+  /* Set a smaller width for the box */
+  max-height: 80%;
+  /* Set a maximum height if needed */
+  overflow: auto;
+  /* Enable scroll if the content overflows vertically */
 }
 
 /* The Close Button */
@@ -1314,27 +1328,29 @@ h2 {
   cursor: pointer;
 }
 
-.font-25{
+.font-25 {
   font-size: 25px;
   margin-bottom: 8px;
 }
 
-.term-ul{
+.term-ul {
   list-style-type: disc !important;
 }
 
-.rss-scroll a{
+.rss-scroll a {
   text-decoration: underline;
   text-align: center;
   color: #0a59cb;
 }
-.rss-scroll p{
+
+.rss-scroll p {
   font-size: 15px;
   font-weight: lighter;
 }
-.rss-parent{
-  width:25%;
-  padding-left:15px;
+
+.rss-parent {
+  width: 25%;
+  padding-left: 15px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1392,16 +1408,19 @@ h2 {
   .nav .logo h1 {
     font-size: 15px;
   }
+
   .modal-content {
-    width: 90%; /* Set a smaller width for the box */
+    width: 90%;
+    /* Set a smaller width for the box */
     margin: 10% auto;
   }
-  .rss-parent{
+
+  .rss-parent {
     width: 100%;
     padding: 10px 15px !important;
   }
-  .flex-column{
+
+  .flex-column {
     flex-direction: column;
   }
 }
-
